[gd_scene load_steps=21 format=2]

[ext_resource path="res://main.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level1.png" type="Texture" id=2]
[ext_resource path="res://levels/level1_above.png" type="Texture" id=3]
[ext_resource path="res://controlDots.gd" type="Script" id=4]
[ext_resource path="res://badGuyGun_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://level1_mazeMap.gd" type="Script" id=6]
[ext_resource path="res://badGuy_spritesheet.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( -93.8185, 2.21495, 93.8185, -2.21495, 283, -818, 0, 0, 0, 0, 405, -806, -25.4609, -39.1229, 25.4609, 39.1229, 496, -743, 55.8117, -88.7914, -55.8117, 88.7914, 620, 78, 116.697, -2.5369, -116.697, 2.5369, 450, 755, 0, 0, 0, 0, 230, 686, 53.2748, 0, -53.2748, 0, 141, 656, 50.8138, 17.7848, -50.8138, -17.7848, -296, 664, 25.4069, 66.0579, -25.4069, -66.0579, -531, 404, 20.2952, 187.73, -20.2952, -187.73, -595, 50, -149.677, 10.1476, 149.677, -10.1476, -257, -812, 0, 0, 0, 0, 131, -813, 0, 0, 0, 0, 283, -818 )
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 325, 0, 325, 325 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 325, 325, 325 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 325, 325, 325, 325 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "shadow",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 496, 140 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 496, 0, 496, 140 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 0, 496, 140 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 140, 496, 140 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 496, 140, 496, 140 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 992, 140, 496, 140 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 6.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": false,
"name": "shadow",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 43.1856

[node name="main" instance=ExtResource( 1 )]
levelLimit = Vector2( 1000, 1000 )

[node name="mazeMap" parent="." index="0"]
script = ExtResource( 6 )

[node name="badGuyPath" type="Path2D" parent="mazeMap" index="0"]
curve = SubResource( 2 )

[node name="badGuyPathFollow" type="PathFollow2D" parent="mazeMap/badGuyPath" index="0"]
position = Vector2( 283, -818 )
rotation = -0.0211959

[node name="badGuyBody" type="RigidBody2D" parent="mazeMap/badGuyPath/badGuyPathFollow" index="0"]
collision_layer = 32
collision_mask = 12
mode = 1
contact_monitor = true
can_sleep = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="mazeMap/badGuyPath/badGuyPathFollow/badGuyBody" index="0"]
rotation = 1.5708
scale = Vector2( 0.3, 0.3 )
z_as_relative = false
frames = SubResource( 6 )

[node name="badGuyCollisionShape" type="CollisionPolygon2D" parent="mazeMap/badGuyPath/badGuyPathFollow/badGuyBody" index="1"]
polygon = PoolVector2Array( -39.2068, -37.8395, 1.78397, -36.9705, 21.7795, -36.5466, 29.7141, -33.3777, 35.5856, -27.2519, 45.329, -15.0427, 47.0107, -0.00360107, 43.5874, 19.9283, 26.2309, 36.5642, -7.80383, 37.8431, -32.8406, 39.3128, -46.6891, 32.0177, -46.2864, 13.022, -40.1818, 8.15021, -38.8429, -7.82495, -45.6929, -14.9717, -48.4803, -25.0331, -45.2903, -33.9675 )

[node name="bgGunAnimatedSprite" type="AnimatedSprite" parent="mazeMap/badGuyPath/badGuyPathFollow/badGuyBody" index="2"]
position = Vector2( -25, 0 )
scale = Vector2( 0.18, 0.18 )
frames = SubResource( 13 )

[node name="floor" type="Sprite" parent="mazeMap" index="1"]
z_index = -99
z_as_relative = false
texture = ExtResource( 2 )

[node name="RigidBody2D" type="RigidBody2D" parent="mazeMap/floor" index="0"]
collision_mask = 9
mode = 1

[node name="CollisionPolygon2D12" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="0"]
polygon = PoolVector2Array( -264, 128, -232, 112, -136, 112, -128, 144, -88, 152, -88, 248, -112, 264, -112, 392, 0, 392, 24, 408, 16, 504, -224, 504, -240, 480, -232, 384, -192, 384, -192, 312, -224, 312, -232, 288, -256, 288, -272, 264 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="1"]
position = Vector2( -64, -256 )
scale = Vector2( 75, 86.68 )
polygon = PoolVector2Array( 1.92, -4.89155, 4.90667, -4.98385, 5.44, -5.07614, 5.44, -5.6299, 5.65333, -5.7222, 5.76, -5.6299, 5.76, -4.89155, 5.86667, -4.79926, 5.86667, -3.69174, 5.65333, -3.50715, 5.65333, -2.58422, 5.97333, -2.30734, 5.97333, -1.01523, 5.54667, -1.01523, 5.54667, -2.49192, 5.22667, -2.7688, 5.22667, -3.69174, 4.37333, -3.69174, 4.37333, 0.184587, 4.69333, 0.553761, 5.54667, 0.553761, 5.86667, 0.0922935, 6.29333, 0, 6.18667, 0.553761, 5.86667, 1.10752, 4.37333, 1.19982, 4.05333, 1.01523, 3.73333, 1.01523, 3.30667, 0.646055, 3.30667, 0.184587, 3.41333, -3.78403, 3.09333, -3.78403, 3.09333, -2.58422, 2.66667, -2.95339, 2.66667, -4.33779, 1.92, -4.43009 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="2"]
polygon = PoolVector2Array( 48, -1000, 48, -944, 96, -944, 96, -880, 368, -880, 368, -896, 416, -904, 432, -936, 432, -968, 424, -1000 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="3"]
polygon = PoolVector2Array( -8, -576, -8, -488, 72, -488, 96, -496, 96, -552, 80, -576 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="4"]
polygon = PoolVector2Array( -128, -672, -128, -640, -168, -640, -176, -544, -184, -536, -184, -488, -200, -472, -264, -464, -280, -648, -264, -672 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="5"]
polygon = PoolVector2Array( -360, -320, -344, -360, -312, -376, -264, -416, -224, -400, -184, -400, -128, -328, -112, -96, -144, -56, -176, -56, -200, -32, -360, -32, -400, -64, -400, -112, -376, -112, -360, -72, -240, -64, -200, -120, -208, -312, -320, -312, -320, -256, -336, -256, -336, -312 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="6"]
polygon = PoolVector2Array( -912, -848, -920, -776, -920, -736, -904, -736, -904, -744, -856, -744, -856, -736, -832, -736, -832, -856, -848, -864, -864, -856 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="7"]
polygon = PoolVector2Array( -872, -624, -848, -648, -672, -648, -656, -616, -664, -528, -856, -528, -880, -552 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="8"]
polygon = PoolVector2Array( -888, -336, -864, -360, -688, -360, -680, -248, -704, -240, -872, -240 )

[node name="CollisionPolygon2D9" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="9"]
polygon = PoolVector2Array( 112, -232, 176, -248, 176, -72, 208, -72, 216, -40, 272, -40, 264, 248, 336, 248, 336, 128, 384, 128, 360, 168, 360, 296, 200, 296, 192, 280, 176, 240, 176, 200, 192, 192, 192, 112, 176, 64, 168, -8, 104, -64 )

[node name="CollisionPolygon2D10" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="10"]
polygon = PoolVector2Array( -32, -288, -40, -224, 40, -224, 40, -296 )

[node name="CollisionPolygon2D11" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="11"]
polygon = PoolVector2Array( -338, 226, -322, 204, -311, 206, -306, 349, -328, 359, -335, 341 )

[node name="CollisionPolygon2D13" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="12"]
polygon = PoolVector2Array( 723, 296, 679, 258, 688, 231, 916, 230, 910, 336, 748, 356, 748, 356, 722, 339 )

[node name="CollisionPolygon2D14" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="13"]
polygon = PoolVector2Array( 631, 443, 665, 417, 850, 418, 847, 537, 635, 536 )

[node name="CollisionPolygon2D15" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="14"]
polygon = PoolVector2Array( -829, 438, -699, 436, -642, 454, -645, 540, -824, 539, -840, 517 )

[node name="CollisionPolygon2D16" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="15"]
polygon = PoolVector2Array( -829, 289, -813, 265, -636, 266, -642, 370, -827, 375 )

[node name="CollisionPolygon2D17" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="16"]
polygon = PoolVector2Array( 187, 384, 190, 459, 274, 461, 277, 381 )

[node name="CollisionPolygon2D18" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="17"]
polygon = PoolVector2Array( 358, 359, 352, 505, 347, 535, 377, 537, 385, 440, 379, 358 )

[node name="CollisionPolygon2D19" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="18"]
polygon = PoolVector2Array( -336, 420, -319, 419, -318, 555, -337, 554 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mazeMap/floor/RigidBody2D" index="19"]
position = Vector2( 822, -868 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="mazeMap/floor/RigidBody2D" index="20"]
position = Vector2( 884, -421 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="mazeMap/floor/RigidBody2D" index="21"]
position = Vector2( 513, 66 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="mazeMap/floor/RigidBody2D" index="22"]
position = Vector2( -488, 70 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="mazeMap/floor/RigidBody2D" index="23"]
position = Vector2( -8, 55 )
shape = SubResource( 1 )

[node name="CollisionPolygon2D20" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="24"]
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D76" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="25"]
position = Vector2( 80, -113 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D21" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="26"]
position = Vector2( 331, -78 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D22" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="27"]
position = Vector2( 349, -219 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D23" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="28"]
position = Vector2( 17, -253 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D24" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="29"]
position = Vector2( 101, 165 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D25" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="30"]
position = Vector2( 307, 173 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D26" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="31"]
position = Vector2( 49, 272 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D27" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="32"]
position = Vector2( 78, 416 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D28" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="33"]
position = Vector2( 171, 426 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D29" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="34"]
position = Vector2( 340, 428 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D30" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="35"]
position = Vector2( 351, 549 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D31" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="36"]
position = Vector2( 253, 591 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D32" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="37"]
position = Vector2( 159, 583 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D33" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="38"]
position = Vector2( 79, 582 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D34" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="39"]
position = Vector2( 341, 996 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D35" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="40"]
position = Vector2( 349, 1055 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D36" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="41"]
position = Vector2( 353, 1173 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D37" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="42"]
position = Vector2( 334, 1354 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D38" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="43"]
position = Vector2( 233, 1350 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D39" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="44"]
position = Vector2( 348, 1441 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D40" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="45"]
position = Vector2( 215, 1466 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D41" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="46"]
position = Vector2( -771, 1617 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D42" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="47"]
position = Vector2( -642, 1659 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D43" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="48"]
position = Vector2( -574, 1689 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D44" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="49"]
position = Vector2( -685, 1540 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D45" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="50"]
position = Vector2( -748, 1502 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D46" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="51"]
position = Vector2( -973, 1552 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D47" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="52"]
position = Vector2( -867, 1652 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D48" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="53"]
position = Vector2( -945, 1655 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D49" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="54"]
position = Vector2( -1078, 1678 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D50" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="55"]
position = Vector2( -1090, 1546 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D51" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="56"]
position = Vector2( -1154, 1499 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D52" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="57"]
position = Vector2( -1137, 1666 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D53" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="58"]
position = Vector2( -1303, 1658 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D54" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="59"]
position = Vector2( -1340, 1376 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D55" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="60"]
position = Vector2( -1444, 1348 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D56" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="61"]
position = Vector2( -1541, 1384 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D57" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="62"]
position = Vector2( -1545, 1521 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D58" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="63"]
position = Vector2( -1478, 1594 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D59" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="64"]
position = Vector2( -1395, 1622 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D60" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="65"]
position = Vector2( -1584, 1629 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D61" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="66"]
position = Vector2( -1537, 1065 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D62" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="67"]
position = Vector2( -1558, 989 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D63" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="68"]
position = Vector2( -1495, 994 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D64" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="69"]
position = Vector2( -1312, 591 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D65" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="70"]
position = Vector2( -1408, 585 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D66" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="71"]
position = Vector2( -1549, 597 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D67" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="72"]
position = Vector2( -1593, 658 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D68" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="73"]
position = Vector2( -1564, 401 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D69" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="74"]
position = Vector2( -1563, 495 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D70" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="75"]
position = Vector2( -1540, 273 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D71" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="76"]
position = Vector2( -1582, 224 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D72" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="77"]
position = Vector2( -1401, -82 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D73" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="78"]
position = Vector2( -1571, -80 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D74" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="79"]
position = Vector2( -1002, -233 )
polygon = PoolVector2Array( 605, -738, 625, -734, 624, -719, 599, -717 )

[node name="CollisionPolygon2D75" type="CollisionPolygon2D" parent="mazeMap/floor/RigidBody2D" index="80"]
position = Vector2( -1159, -227 )
polygon = PoolVector2Array( 590, -756, 635, -760, 633, -684, 598, -690 )

[node name="above" type="Sprite" parent="mazeMap" index="2"]
z_index = 99
z_as_relative = false
texture = ExtResource( 3 )

[node name="playerSprite" parent="." index="1"]
collision_mask = 33

[node name="controlDots2" type="Node2D" parent="playerSprite/controlDots" index="2"]
position = Vector2( 1.14441e-05, 0.199997 )
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 4 )

[node name="controlDotTemplate" type="Node2D" parent="playerSprite/controlDots/controlDots2" index="0"]

[node name="offsetADot" type="Node2D" parent="playerSprite/controlDots/controlDots2/controlDotTemplate" index="0"]
position = Vector2( 300, 0 )
scale = Vector2( 0.3, 0.3 )

[node name="aDot" type="Polygon2D" parent="playerSprite/controlDots/controlDots2/controlDotTemplate/offsetADot" index="0"]
position = Vector2( -25, -75 )
antialiased = true
polygon = PoolVector2Array( 0, 0, 50, 0, 100, 50, 100, 100, 50, 150, 0, 150, -50, 100, -50, 50 )

[node name="Camera2D" parent="." index="2"]
limit_smoothed = true
